--- a/html/index.html
+++ b/html/index.html
@@ -119,9 +119,9 @@
                 <!--</a>-->
                 <a href="index.html" class="item active">Главная</a>
                 <a href="./training.html" class="item">Тренировки</a>
-                <a href="#" class="item">Марафон
+                <!--<a href="#" class="item">Марафон-->
                 <a href="./photograph.html" class="item">Фотография</a>
-                <a href="#" class="item">Туры</a>
+                <!--<a href="#" class="item">Туры</a>-->
             </ul>
         </nav>
     </div>
@@ -152,11 +152,11 @@
                 <div class="carouselItem active">
                     <div class="posr carouseItemBox">
                         <div class="carouselText">
-                            <h2 class="title">Моя программа способна <span>улучшить</span><br> гибкость любого человека</h2>
-                            <p>Разрабатывалась годами и что-то там</p>
+                            <h2 class="title">Моя программа <span>улучшит</span><br> гибкость любого человека</h2>
+                            <p>Индивидуальный подход к каждому человеку</p>
                             <a href="./training.html" class="linkTo">Подробнее</a>
                         </div>
-                        <img src="../img/5.jpg" alt="">
+                        <img class="right" src="../img/5.jpg" alt="">
                     </div>
                 </div>
                 <div class="carouselItem">
@@ -166,7 +166,7 @@
                             <p>Хожу заручку с фотооапаратом и мы с ним лучшие друзья</p>
                             <a href="./photograph.html" class="linkTo">Больше информации</a>
                         </div>
-                        <img src="../img/3.jpg" alt="">
+                        <img data-lazy="0" src="#" alt="">
                     </div>
                 </div>
                 <div class="carouselItem">
@@ -175,7 +175,7 @@
                             <h2 class="title">Я тренер не только для <span>вас</span> но и для <span>себя!</span></h2>
                             <p>растянулась без чьей либо помощи на своих ощущениях</p>
                         </div>
-                        <img src="../img/4.jpg" alt="">
+                        <img data-lazy="1" class="right"  src="../img/4.jpg" alt="">
                     </div>
                 </div>
                 <div class="carouselItem">
@@ -184,7 +184,7 @@
                             <h2 class="title">Я постоянно развиваюсь, хожу на <span>тренинги</span> и <span>семинары</span></h2>
                             <p>Могу по одной походке определить, какие проблемы имеет человек</p>
                         </div>
-                        <img src="../img/2.jpg" alt="">
+                        <img data-lazy="2" src="#" alt="">
                     </div>
                 </div>
                 <!--<div class="carouselItem">-->
@@ -204,7 +204,7 @@
                             <p>Мы с вами вместе поднимемся на 2300 м. и изведаем не мало троп</p>
                             <a href="#" class="linkTo">Посмотреть по подробней</a>
                         </div>
-                        <img src="../img/7.jpg" alt="">
+                        <img data-lazy="3" class="right" src="#" alt="">
                     </div>
                 </div>
                 <!--<div class="carouselItem">-->
