--- a/html/photograph.html
+++ b/html/photograph.html
@@ -119,9 +119,9 @@
                 <!--</a>-->
                 <a href="index.html" class="item">Главная</a>
                 <a href="./training.html" class="item">Тренировки</a>
-                <a href="#" class="item">Марафон
+                <!--<a href="#" class="item">Марафон-->
                 <a href="photograph.html" class="item active">Фотография</a>
-                <a href="#" class="item">Туры</a>
+                <!--<a href="#" class="item">Туры</a>-->
             </ul>
         </nav>
     </div>
