--- a/html/training.html
+++ b/html/training.html
@@ -119,9 +119,9 @@
                 <!--</a>-->
                 <a href="index.html" class="item">Главная</a>
                 <a href="./training.html" class="item active">Тренировки</a>
-                <a href="#" class="item">Марафон
+                <!--<a href="#" class="item">Марафон-->
                 <a href="./photograph.html" class="item">Фотография</a>
-                <a href="#" class="item">Туры</a>
+                <!--<a href="#" class="item">Туры</a>-->
             </ul>
         </nav>
     </div>
@@ -138,20 +138,19 @@
                 </p>
                 <div class="showPhoto" data-scrollTo="back">Хочу здоровую спину</div>
             </div>
-            <h2 class="title">
+            <h2 class="title" data-scrollTo="back">
                 Здоровая спина<br/> + стретчинг
             </h2>
         </div>
         <div class="item b">
             <div class="bgImage"></div>
             <div class="extraText">
-                <div class="title">Укрепление и подтяжка всего тела </div>
-                <p class="text">Вид силовой тренировки, проходящей в аэробном режиме, целью которой является развитие мышечной силы и создание
-                    мышечного рельефа.</p>
+                <div class="title">Укрепление и подтяжка лица и декольте </div>
+                <p class="text">Убираем оттеки, снимаем спазмы, укпепляем мышцы.</p>
                 <div class="showPhoto" data-scrollTo="bodysculpt">Прокачаться</div>
             </div>
-            <h2 class="title">
-                Body Sculpt
+            <h2 class="title" data-scrollTo="bodysculpt">
+                Face fitness
             </h2>
         </div>
         <div class="item c">
@@ -160,9 +159,9 @@
                 <div class="title">Растянись и улыбнись!</div>
                 <p class="text">Тренировка направлена на улучшение гибкости и подвижности всего тела.</p>
                 <p class="text mt2"> Растяжка укрепляет и расслабляет мышцы одновременно, снимая ощущение зажатости. Человек с гибким и пластичными телом раскован в движениях и уверен в себе.</p>
-                <div class="showPhoto">Растянуться</div>
+                <div class="showPhoto" data-scrollTo="stretchall">Растянуться</div>
             </div>
-            <h2 class="title">
+            <h2 class="title" data-scrollTo="stretchall">
                 Растяжка всего тела
             </h2>
         </div>
@@ -173,7 +172,7 @@
                 <p class="text">Танец на пилоне или, привычнее, танец на шесте. Со стриптизом, кроме самого шеста, в нем нет ничего общего. </p>
                 <div class="showPhoto" data-scrollTo="poledance">Начать</div>
             </div>
-            <h2 class="title">
+            <h2 class="title" data-scrollTo="poledance">
                 POLEDANCE
             </h2>
         </div>
@@ -182,22 +181,10 @@
             <div class="extraText">
                 <div class="title">Эффектные парные акробатические элементы</div>
                 <p class="text">Акройога — это направление йоги, которое органично комбинирует в себе йогу, акробатику, а также элементы тайского массажа. </p>
-                <div class="showPhoto">Попробовать</div>
+                <div class="showPhoto" data-scrollTo="acroyoga">Попробовать</div>
             </div>
-            <h2 class="title">
+            <h2 class="title" data-scrollTo="acroyoga">
                 Акройога
-            </h2>
-        </div>
-        <div class="item l">
-            <div class="bgImage"></div>
-            <div class="extraText">
-                <div class="title">Суперский текст</div>
-                <p class="text">Упражнения стимулируют работу сердца и улучшают циркуляцию крови, помогают организму быстро адаптироваться
-                    к происходящим изменениям.</p>
-                <div class="showPhoto">Подробнее</div>
-            </div>
-            <h2 class="title">
-                Аэробика
             </h2>
         </div>
         <div class="item k">
@@ -205,9 +192,9 @@
             <div class="extraText">
                 <div class="title">Глубокая прокачка пресса, ягодиц, поясницы </div>
                 <p class="text">Фитнес ABS — это совокупность упражнений на мышцы брюшного пресса, бедра и ягодицы, поясницу. </p>
-                <div class="showPhoto">Хочу пресс</div>
+                <div class="showPhoto" data-scrollTo="abs">Хочу пресс</div>
             </div>
-            <h2 class="title">
+            <h2 class="title" data-scrollTo="abs">
                 ABS
             </h2>
         </div>
@@ -216,11 +203,46 @@
             <div class="extraText">
                 <div class="title">Суперский текст</div>
                 <p class="text">Суперский текст для описания и всякой чуши что сюда можно написать для того что бы улыбалась моя зайка</p>
-                <div class="showPhoto">Начать</div>
+                <div class="showPhoto" data-scrollTo="acrobatics">Начать</div>
             </div>
-            <h2 class="title">
+            <h2 class="title" data-scrollTo="acrobatics">
                 Стойки на руках<br/> + Акробатика
             </h2>
+        </div>
+    </section>
+    <section class="trainingPrice">
+        <div class="item">
+            <div class="title">Индивидульные</div>
+            <p class="">
+                Занятия с одним человеком.
+                Тренировка может проходить у меня на дому, у Вас на дому, на свежем воздухе.
+                Входит:
+                анализ состояния тела
+                составление Вашей карты тела
+                анализ работы мышц
+                рекомендации упражнений
+                полноценная тренировка
+                по желанию составление программы упражнений
+            </p>
+            <div>Стоимость 1000р - по городу Королев</div>
+            <div>Стоимость 1600р - в студии г. Королев</div>
+            <div>Выезд за город - стоимость договорная</div>
+
+        </div>
+        <div class="item">
+            <div class="title">Ваши групповые</div>
+            <p class="">Группу вы набираете сами. Тренировки могут проходить на свежем воздухе или в студии.</p>
+            <div>Стоимость 1200р - по городу Королев (2 человека + 200р за каждого дополнительно)</div>
+            <div>В студии г. Королев к общей сумме + 600р</div>
+            <div>Выезд за город - стоимость договорная</div>
+        </div>
+        <div class="item">
+            <div class="title">Мои групповые</div>
+            <p class="">
+                Тренировка может на свежем воздухе или в студии.
+                Я добавляю вас в свой чат и вместе со всеми мы выбираем удобный день и время.
+                Стоимость 450р за занятие.
+            </p>
         </div>
     </section>
     <div class="trainingContent">
@@ -243,7 +265,7 @@
                         <li><div></div>Улучшение гибкости и подвижности позвоночника</li>
                         <li><div></div>Избавление от головных болей</li>
                         <li><div></div>Улучшение сна и общего самочувствия</li>
-                        <li><div></div>Стройное и подтянутое тело</li>
+                        <li><div></div>Стройные и подтянутые ягодички</li>
                     </ul>
                     <svg xmlns="http://www.w3.org/2000/svg" version="1.1" class="svgFilter">
                         <defs>
@@ -260,31 +282,113 @@
                     <img src="../img/training/1.jpg" alt="">
                 </div>
             </div>
-            <h2 class="title r" id="bodysculpt">BODY SCULPT</h2>
-            <div class="trainingBigBox ta-r">
+            <h2 class="title r" id="bodysculpt">Face fitness</h2>
+            <div class="trainingBigBox reverse">
                 <div class="trainingPhoto">
                     <img src="../img/training/1.jpg" alt="">
                 </div>
                 <div>
-                    <div class="textAccent">Тренировки</div>
-                    <p>Помогут уменьшить стресс и мышечное напряжение. Стресс является одной из причин
-                        боли в спине. Физическая активность стимулирует выработку эндорфинов, которые улучшают самочувствие и уменьшают боль.
+                    <div class="textAccent">Цели программы</div>
+                    <p>
+                        Улучшение состояния кожи без уколов и операций. Замедление старения и повышения ее элластичности. Повышение упругости области шеи и зоны дэкольте.
+                        Усиление притока к тканям питательных вещести и отток отработанных, что позволяет справиться с оттеками и тусклым цветом кожи.
                     </p>
+                    <div class="textAccent">Что вы получите</div>
+                    <ul class="preim left">
+                        <li><div></div>Попрощаетесь с мимическими морщинами</li>
+                        <li><div></div>Упругие мышцы лица</li>
+                        <li><div></div>Четкие линии лица</li>
+                        <li><div></div>Снятие оттечности</li>
+                        <li><div></div>Оприятные цвет кожи</li>
+                    </ul>
                 </div>
             </div>
             <h2 class="title" id="poledance">POLEDANCE</h2>
             <div class="trainingBigBox">
                 <div>
-                    <div class="textAccent">Тренировки</div>
-                    <p>Помогут уменьшить стресс и мышечное напряжение. Стресс является одной из причин
-                        боли в спине. Физическая активность стимулирует выработку эндорфинов, которые улучшают самочувствие и уменьшают боль.
+                    <div class="textAccent">Цели программы</div>
+                    <p>
+                        Развить пластику тела, чувство ритма. Стать более уверенной и сексуальной. В процессе происходит активное укрепление мышечного карсета.
+                        Тело становиться более подтянутым.
                     </p>
+                    <div class="textAccent">Что вы получите</div>
+                    <ul class="preim">
+                        <li><div></div>Стройное и подтянутое тело</li>
+                        <li><div></div>Сексуальность в движении</li>
+                        <li><div></div>Головокружительные трюки</li>
+                        <li><div></div>Гибкое тело</li>
+                    </ul>
+                </div>
+                <div class="trainingPhoto b30">
+                    <img src="../img/training/33.jpg" alt="">
+                </div>
+            </div>
+            <h2 class="title r" id="stretchingall">Растяжка всего тела + <span>шпагаты</span></h2>
+            <div class="trainingBigBox reverse">
+                <div class="trainingPhoto">
+                    <img src="../img/training/33.jpg" alt="">
+                </div>
+                <div>
+                    <div class="textAccent">Цели программы</div>
+                    <p>
+                        Растяжка способствует повышению элластичности связок и мышц, а также увеличению и сохранению длины мышц.
+                        Гибкость означет свобода движения. Это важная часть всех ваших действий. Упражнения на растяжку значительно улучшат гибкость и сделают ваше тело мобильнее.
+                    </p>
+                    <div class="textAccent">Что вы получите</div>
+                    <ul class="preim">
+                        <li><div></div>Улучшение подвижности сутавов</li>
+                        <li><div></div>Понижение нагрузки на хрящи суставов и межпозвоночные диски</li>
+                        <li><div></div>Снятие спазмов и зажимов</li>
+                        <li><div></div>Снабжение мышц кислородом</li>
+                        <li><div></div>Свобода в движении</li>
+                        <li><div></div>Быстрое восстановление после тренировок</li>
+                    </ul>
+                </div>
+            </div>
+            <h2 class="title" id="acroyoga">Акройога</h2>
+            <div class="trainingBigBox">
+                <div>
+                    <div class="textAccent">Цели программы</div>
+                    <p>
+                        Акройога эта комбинация начальных элементов акробатики, йоги и тайского массажа.
+                        В цели программы входит развитие чувства равновесия, доверия партнеру, вестибюлярного аппарата и повышение настроения.
+                        Постепенно ваше тело становится более гибким и сильным.
+                    </p>
+                    <div class="textAccent">Что вы получите</div>
+                    <ul class="preim дуае">
+                        <li><div></div>Гармонию с внутренним и внешним миром</li>
+                        <li><div></div>Сильное и здоровое тело</li>
+                        <li><div></div>Прекрасное настроение на весь день</li>
+                        <li><div></div>Опыт тайского массажа</li>
+                        <li><div></div>Научитесь базовые элементы акробатики и йоги</li>
+                    </ul>
                 </div>
                 <div class="trainingPhoto">
                     <img src="../img/training/33.jpg" alt="">
                 </div>
             </div>
+            <h2 class="title r" id="abs">ABS</h2>
+            <div class="trainingBigBox reverse">
+                <div class="trainingPhoto">
+                    <img src="../img/training/33.jpg" alt="">
+                </div>
+                <div>
+                    <div class="textAccent">Цели программы</div>
+                    <p>
+                        Укрепление мышц брюшного пресса
+                    </p>
+                    <div class="textAccent">Что вы получите</div>
+                    <ul class="preim дуае">
+                        <li><div></div>Гармонию с внутренним и внешним миром</li>
+                        <li><div></div>Сильное и здоровое тело</li>
+                        <li><div></div>Прекрасное настроение на весь день</li>
+                        <li><div></div>Опыт тайского массажа</li>
+                        <li><div></div>Научитесь базовые элементы акробатики и йоги</li>
+                    </ul>
+                </div>
+            </div>
         </section>
+        <div class="arrowToTop"></div>
     </div>
 </body>
 </html>
