--- a/html/training.html
+++ b/html/training.html
@@ -211,38 +211,66 @@
         </div>
     </section>
     <section class="trainingPrice">
-        <div class="item">
-            <div class="title">Индивидульные</div>
-            <p class="">
-                Занятия с одним человеком.
-                Тренировка может проходить у меня на дому, у Вас на дому, на свежем воздухе.
-                Входит:
-                анализ состояния тела
-                составление Вашей карты тела
-                анализ работы мышц
-                рекомендации упражнений
-                полноценная тренировка
-                по желанию составление программы упражнений
-            </p>
-            <div>Стоимость 1000р - по городу Королев</div>
-            <div>Стоимость 1600р - в студии г. Королев</div>
-            <div>Выезд за город - стоимость договорная</div>
+        <div class="container">
+            <div class="item your">
+                <div class="front">
+                    <div class="title">Ваши групповые</div>
+                    <p class="text">Группу вы набираете сами. </p>
+                    <p class="text">Тренировки могут проходить на свежем воздухе или в студии.</p>
+                </div>
+                <div class="back">
+                    <div>Стоимость 1200р - по городу Королев (2 человека + 200р за каждого дополнительно)</div>
+                    <div>В студии г. Королев к общей сумме + 600р</div>
+                    <div>Выезд за город - стоимость договорная</div>
+                </div>
+            </div>
+            <div class="item pers">
+                <div class="front">
+                    <div class="title">Индивидульные</div>
+                    <p class="text">
+                        Занятия с одним человеком.
+                    </p>
+                    <p class="text">
+                        Тренировка может проходить у меня на дому, у Вас на дому, на свежем воздухе.
+                    </p>
+                    <p class="extraTitle">Входит: </p>
+                    <ul class="priceList">
+                        <li>Анализ состояния тела</li>
+                        <li>Составление Вашей карты тела</li>
+                        <li>Анализ работы мышц</li>
+                        <li>Рекомендации упражнений</li>
+                        <li>Полноценная тренировка</li>
+                        <li>По желанию составление программы упражнений</li>
+                    </ul>
+                </div>
+                <div class="back">
+                    <div>Стоимость 1000р - по городу Королев</div>
+                    <div>Стоимость 1600р - в студии г. Королев</div>
+                    <div>Выезд за город - стоимость договорная</div>
+                </div>
 
-        </div>
-        <div class="item">
-            <div class="title">Ваши групповые</div>
-            <p class="">Группу вы набираете сами. Тренировки могут проходить на свежем воздухе или в студии.</p>
-            <div>Стоимость 1200р - по городу Королев (2 человека + 200р за каждого дополнительно)</div>
-            <div>В студии г. Королев к общей сумме + 600р</div>
-            <div>Выезд за город - стоимость договорная</div>
-        </div>
-        <div class="item">
-            <div class="title">Мои групповые</div>
-            <p class="">
-                Тренировка может на свежем воздухе или в студии.
-                Я добавляю вас в свой чат и вместе со всеми мы выбираем удобный день и время.
-                Стоимость 450р за занятие.
-            </p>
+            </div>
+
+            <svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                 viewBox="0 0 330 400" style="enable-background:new 0 0 330 500;" xml:space="preserve">
+                <clipPath id="clipTitle">
+                 <path class="st0" d="M0,0h330v72l-0.3,0.1C222.3,104.6,107.6,105,0,73l0,0V0z"/>
+                </clipPath>
+            </svg>
+            <div class="item my">
+                <div class="front">
+                    <div class="title">Мои групповые</div>
+                    <p class="text">
+                        Тренировка может на свежем воздухе или в студии.
+                    </p>
+                    <p class="text">
+                        Я добавляю вас в свой чат и вместе со всеми мы выбираем удобный день и время.
+                    </p>
+                </div>
+                <div class="back">
+                    Стоимость 450р за занятие.
+                </div>
+            </div>
         </div>
     </section>
     <div class="trainingContent">
