--- a/html/training.html
+++ b/html/training.html
@@ -211,17 +211,20 @@
         </div>
     </section>
     <section class="trainingPrice">
+        <div class="absoluteDescription">* Нажите на карточку для просмотра цены</div>
         <div class="container">
             <div class="item your">
                 <div class="front">
                     <div class="title">Ваши групповые</div>
-                    <p class="text">Группу вы набираете сами. </p>
-                    <p class="text">Тренировки могут проходить на свежем воздухе или в студии.</p>
+                    <div class="contextBody">
+                        <p class="text">Группу вы набираете сами. </p>
+                        <p class="text">Тренировки могут проходить на свежем воздухе или в студии.</p>
+                    </div>
                 </div>
                 <div class="back">
-                    <div>Стоимость 1200р - по городу Королев (2 человека + 200р за каждого дополнительно)</div>
-                    <div>В студии г. Королев к общей сумме + 600р</div>
-                    <div>Выезд за город - стоимость договорная</div>
+                    <div><span>1200р</span> по городу Королев (2 человека + 200р за каждого дополнительно)</div>
+                    <div>В студии г. Королев к общей сумме + <span>600р</span></div>
+                    <div><span>Выезд за город</span> стоимость договорная</div>
                 </div>
             </div>
             <div class="item pers">
@@ -244,9 +247,9 @@
                     </ul>
                 </div>
                 <div class="back">
-                    <div>Стоимость 1000р - по городу Королев</div>
-                    <div>Стоимость 1600р - в студии г. Королев</div>
-                    <div>Выезд за город - стоимость договорная</div>
+                    <div><span>1000р</span> по городу Королев</div>
+                    <div><span>1600р</span> в студии г. Королев</div>
+                    <div><span>Выезд за город</span> стоимость договорная</div>
                 </div>
 
             </div>
@@ -261,14 +264,16 @@
                 <div class="front">
                     <div class="title">Мои групповые</div>
                     <p class="text">
-                        Тренировка может на свежем воздухе или в студии.
+                        Тренировка может проходить на свежем воздухе или в студии.
                     </p>
                     <p class="text">
                         Я добавляю вас в свой чат и вместе со всеми мы выбираем удобный день и время.
                     </p>
                 </div>
                 <div class="back">
-                    Стоимость 450р за занятие.
+                    <div>
+                        <span>450р</span>за занятие.
+                    </div>
                 </div>
             </div>
         </div>
@@ -313,7 +318,7 @@
             <h2 class="title r" id="bodysculpt">Face fitness</h2>
             <div class="trainingBigBox reverse">
                 <div class="trainingPhoto">
-                    <img src="../img/training/1.jpg" alt="">
+                    <img src="../img/training/7.jpg" alt="">
                 </div>
                 <div>
                     <div class="textAccent">Цели программы</div>
@@ -348,13 +353,13 @@
                     </ul>
                 </div>
                 <div class="trainingPhoto b30">
-                    <img src="../img/training/33.jpg" alt="">
+                    <img src="../img/4.jpg" alt="">
                 </div>
             </div>
             <h2 class="title r" id="stretchingall">Растяжка всего тела + <span>шпагаты</span></h2>
             <div class="trainingBigBox reverse">
                 <div class="trainingPhoto">
-                    <img src="../img/training/33.jpg" alt="">
+                    <img src="../img/training/4.jpg" alt="">
                 </div>
                 <div>
                     <div class="textAccent">Цели программы</div>
@@ -392,13 +397,13 @@
                     </ul>
                 </div>
                 <div class="trainingPhoto">
-                    <img src="../img/training/33.jpg" alt="">
+                    <img src="../img/training/2.jpg" alt="">
                 </div>
             </div>
             <h2 class="title r" id="abs">ABS</h2>
             <div class="trainingBigBox reverse">
                 <div class="trainingPhoto">
-                    <img src="../img/training/33.jpg" alt="">
+                    <img src="../img/training/6.jpg" alt="">
                 </div>
                 <div>
                     <div class="textAccent">Цели программы</div>
@@ -412,6 +417,28 @@
                         <li><div></div>Прекрасное настроение на весь день</li>
                         <li><div></div>Опыт тайского массажа</li>
                         <li><div></div>Научитесь базовые элементы акробатики и йоги</li>
+                    </ul>
+                </div>
+            </div>
+            <h2 class="title r" id="handbalance">Стойки на руках + <span>Акробатика</span></h2>
+            <div class="trainingBigBox reverse">
+                <div class="trainingPhoto">
+                    <img src="../img/training/8.jpg" alt="">
+                </div>
+                <div>
+                    <div class="textAccent">Цели программы</div>
+                    <p>
+                        Укрепление мышц кора, плечего пояса, мышцы ног. Растяжка кора и поясницы и поперечного шпагата.
+                    </p>
+                    <div class="textAccent">Что вы получите</div>
+                    <ul class="preim дуае">
+                        <li><div></div>Научитесь балансировать на руках или одной руке</li>
+                        <li><div></div>Научитесь выполнять не сложные акробатические элементы</li>
+                        <li><div></div>Продвинутые научатся делать сложные</li>
+                        <li><div></div>Попереченый шпагат и гибкая спина</li>
+                        <li><div></div>Сильный прокаченный верх</li>
+                        <li><div></div>8 кубиков</li>
+                        <li><div></div>Очень красивые элементы</li>
                     </ul>
                 </div>
             </div>
