--- a/html/index.html
+++ b/html/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Савченко Екатерина</title>
+    <title>Catterino - Савченко Екатерина</title>
+    <meta name="description" content="Сертифицированный тренер. Профессиональный тренер.">
+    <meta name="keywords" content="Растяжка, Тренировки, Фотосессия, Видеосьемка, Фотосьемка">
+    <meta name="author" content="oilPersonage">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../img/favicon.png" type="image/png">
 </head>
 <body id="home">
     <div class="menu--1">
