--- a/html/photograph.html
+++ b/html/photograph.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Фото-портфолио Савченко Екатерины</title>
+    <title>Фотограф Савченко Екатерина</title>
+    <meta name="description" content="Неповторимые профессиональные фотографии и видео ваших эмоций. Студийные, Уличные, Неоновые фотосессии.">
+    <meta name="keywords" content="Фотограф, Портфолио, Catterino, Photo, Photograph, Видео, Video, Фотографии, Фотосессии">
+    <meta name="author" content="oilPersonage">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body id="photograph">
@@ -18,9 +21,9 @@
             </label>
         </div>
         <nav class="dark">
-            <a href="index.html" class="item active">Главная</a>
+            <a href="index.html" class="item">Главная</a>
             <a href="./training.html" class="item">Тренировки</a>
-            <a href="./photograph.html" class="item">Фотография</a>
+            <a href="./photograph.html" class="item active">Фотография</a>
         </nav>
     </div>
     <div class="linkHome noHome">
