--- a/html/training.html
+++ b/html/training.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Тренировки с Савченко Екатериной</title>
+    <meta name="description" content="Сертифицированный тренер. Собственная программа Персональных, Групповых и Индивидальных тренировок. Здоровая спина, Растяжка, Face fitness, Poledance, Акройога, Abs, Стойки на руках">
+    <meta name="keywords" content="Растяжка, Тренировка, Индивидуальные тренировки, Фитнес тренер, Стойки на руках, Акройога, Facefitness, Здоровая спина.">
+    <meta name="author" content="oilPersonage">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 </head>
 <body class="training">
@@ -18,8 +21,8 @@
             </label>
         </div>
         <nav class="dark">
-            <a href="index.html" class="item active">Главная</a>
-            <a href="./training.html" class="item">Тренировки</a>
+            <a href="index.html" class="item">Главная</a>
+            <a href="./training.html" class="item active">Тренировки</a>
             <a href="./photograph.html" class="item">Фотография</a>
         </nav>
     </div>
@@ -286,7 +289,7 @@
                         Постепенно ваше тело становится более гибким и сильным.
                     </p>
                     <div class="textAccent">Что вы получите</div>
-                    <ul class="preim дуае">
+                    <ul class="preim">
                         <li><div></div>Гармонию с внутренним и внешним миром</li>
                         <li><div></div>Сильное и здоровое тело</li>
                         <li><div></div>Прекрасное настроение на весь день</li>
@@ -309,7 +312,7 @@
                         Укрепление мышц брюшного пресса
                     </p>
                     <div class="textAccent">Что вы получите</div>
-                    <ul class="preim дуае">
+                    <ul class="preim">
                         <li><div></div>Гармонию с внутренним и внешним миром</li>
                         <li><div></div>Сильное и здоровое тело</li>
                         <li><div></div>Прекрасное настроение на весь день</li>
@@ -318,18 +321,15 @@
                     </ul>
                 </div>
             </div>
-            <h2 class="title r" id="handbalance">Стойки на руках + <span>Акробатика</span></h2>
-            <div class="trainingBigBox reverse">
-                <div class="trainingPhoto">
-                    <img src="../img/training/8.jpg" alt="">
-                </div>
+            <h2 class="title" id="acrobatics">Стойки на руках + <span>Акробатика</span></h2>
+            <div class="trainingBigBox">
                 <div>
                     <div class="textAccent">Цели программы</div>
                     <p>
                         Укрепление мышц кора, плечего пояса, мышцы ног. Растяжка кора и поясницы и поперечного шпагата.
                     </p>
                     <div class="textAccent">Что вы получите</div>
-                    <ul class="preim дуае">
+                    <ul class="preim">
                         <li><div></div>Научитесь балансировать на руках или одной руке</li>
                         <li><div></div>Научитесь выполнять не сложные акробатические элементы</li>
                         <li><div></div>Продвинутые научатся делать сложные</li>
@@ -339,6 +339,9 @@
                         <li><div></div>Очень красивые элементы</li>
                     </ul>
                 </div>
+              <div class="trainingPhoto">
+                <img src="../img/training/8.jpg" alt="">
+              </div>
             </div>
         </section>
         <div class="arrowToTop"></div>
