fix bugs and new menu

--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Catterino - Савченко Екатерина</title>
@@ -9,46 +10,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../img/favicon.png" type="image/png">
 </head>
+
 <body id="home">
     <div class="menu--1">
         <div class="menu cross">
             <label>
                 <input type="checkbox" id="inputHamb">
                 <svg id="hamburger" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                    <path class="line--1" d="M0 40h62c13 0 6 28-4 18L35 35"/>
-                    <path class="line--2" d="M0 50h70"/>
-                    <path class="line--3" d="M0 60h62c13 0 6-28-4-18L35 65"/>
+                    <path class="line--1" d="M0 40h62c13 0 6 28-4 18L35 35" />
+                    <path class="line--2" d="M0 50h70" />
+                    <path class="line--3" d="M0 60h62c13 0 6-28-4-18L35 65" />
                 </svg>
             </label>
         </div>
         <nav>
-            <a href="index.html" class="item active">Главная</a>
-            <a href="./training.html" class="item">Тренировки</a>
-            <a href="./photograph.html" class="item">Фотография</a>
+            <a href="index.html" class="item active">
+                Главная
+            </a>
+            <a href="./training.html" class="item">
+                Тренировки
+            </a>
+            <a href="./photograph.html" class="item">
+                Фотография
+            </a>
         </nav>
     </div>
     <div>
         <div class="linkHome">
             <a href="tel:89990037029" class="phone">8 999 003-70-29</a>
-            <a target="_blank" href="https://www.instagram.com/catterino/?hl=ru">
+            <a target="_blank" rel="noopener" href="https://www.instagram.com/catterino/?hl=ru">
                 <svg class="svgInst" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                    <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
+                    <path
+                        d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" />
                 </svg>
             </a>
-            <a target="_blank" href="https://vk.com/catterino">
+            <a target="_blank" rel="noopener" href="https://vk.com/catterino">
                 <svg class="svgVk" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                    <path d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm.581 15.997c.304 0 .429-.204.425-.458-.016-.958.356-1.474 1.03-.802.744.744.896 1.26 1.801 1.26h1.601c.403 0 .562-.13.562-.334 0-.432-.711-1.194-1.312-1.752-.844-.783-.882-.802-.156-1.744.9-1.169 2.079-2.667 1.037-2.667h-1.991c-.387 0-.414.217-.551.542-.498 1.173-1.443 2.693-1.803 2.461-.377-.243-.204-1.203-.175-2.63.008-.377.006-.636-.571-.77-.314-.073-.621-.103-.903-.103-1.137 0-1.922.477-1.477.56.785.146.711 1.846.527 2.58-.319 1.278-1.518-1.012-2.018-2.152-.12-.275-.155-.488-.586-.488h-1.627c-.247 0-.394.08-.394.258 0 .301 1.479 3.36 2.892 4.885 1.379 1.487 2.742 1.354 3.689 1.354z"/>
+                    <path
+                        d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm.581 15.997c.304 0 .429-.204.425-.458-.016-.958.356-1.474 1.03-.802.744.744.896 1.26 1.801 1.26h1.601c.403 0 .562-.13.562-.334 0-.432-.711-1.194-1.312-1.752-.844-.783-.882-.802-.156-1.744.9-1.169 2.079-2.667 1.037-2.667h-1.991c-.387 0-.414.217-.551.542-.498 1.173-1.443 2.693-1.803 2.461-.377-.243-.204-1.203-.175-2.63.008-.377.006-.636-.571-.77-.314-.073-.621-.103-.903-.103-1.137 0-1.922.477-1.477.56.785.146.711 1.846.527 2.58-.319 1.278-1.518-1.012-2.018-2.152-.12-.275-.155-.488-.586-.488h-1.627c-.247 0-.394.08-.394.258 0 .301 1.479 3.36 2.892 4.885 1.379 1.487 2.742 1.354 3.689 1.354z" />
                 </svg>
             </a>
         </div>
         <header class="scrollBox">
             <div class="scrollItem one" id="carouselHome">
                 <!--<div class="headerScrollBottom">-->
-                    <!--<svg class="arrows" viewBox="0 0 100 100">-->
-                        <!--<path class="a1" d="M0 0 L50 32 L100 0"></path>-->
-                        <!--<path class="a2" d="M0 30 L50 62 L100 30"></path>-->
-                        <!--<path class="a3" d="M0 60 L50 92 L100 60"></path>-->
-                    <!--</svg>-->
+                <!--<svg class="arrows" viewBox="0 0 100 100">-->
+                <!--<path class="a1" d="M0 0 L50 32 L100 0"></path>-->
+                <!--<path class="a2" d="M0 30 L50 62 L100 30"></path>-->
+                <!--<path class="a3" d="M0 60 L50 92 L100 60"></path>-->
+                <!--</svg>-->
                 <!--</div>-->
                 <div class="carouselDots"></div>
                 <div class="carouselItem active">
@@ -64,7 +74,8 @@
                 <div class="carouselItem">
                     <div class="posr carouseItemBox">
                         <div class="carouselText">
-                            <h2 class="title">Запечатлю ваши <span>эмоции</span> и реализую любую <span>вашу идею</span></h2>
+                            <h2 class="title">Запечатлю ваши <span>эмоции</span> и реализую любую <span>вашу идею</span>
+                            </h2>
                             <p>Хожу заручку с фотооапаратом и мы с ним лучшие друзья</p>
                             <a href="./photograph.html" class="linkTo">Больше информации</a>
                         </div>
@@ -77,32 +88,34 @@
                             <h2 class="title">Я тренер не только для <span>вас</span> но и для <span>себя!</span></h2>
                             <p>растянулась без чьей либо помощи на своих ощущениях</p>
                         </div>
-                        <img data-lazy="1" class="right"  src="../img/4.jpg" alt="">
+                        <img data-lazy="1" class="right" src="../img/4.jpg" alt="">
                     </div>
                 </div>
                 <div class="carouselItem">
                     <div class="posr carouseItemBox">
                         <div class="carouselText">
-                            <h2 class="title">Я постоянно развиваюсь, хожу на <span>тренинги</span> и <span>семинары</span></h2>
+                            <h2 class="title">Я постоянно развиваюсь, хожу на <span>тренинги</span> и
+                                <span>семинары</span></h2>
                             <p>Могу по одной походке определить, какие проблемы имеет человек</p>
                         </div>
                         <img data-lazy="2" src="#" alt="">
                     </div>
                 </div>
                 <!--<div class="carouselItem">-->
-                    <!--<div class="posr carouseItemBox">-->
-                        <!--<div class="carouselText">-->
-                            <!--<h2 class="title">Ваш личный мотиватор<br/> и источник пищи для мозга</h2>-->
-                            <!--<p>Расскажу как избавиться от лишнего! Наверстать упущенное.</p>-->
-                            <!--<p>Покарать недоваольных тварей и наслаждаться рассветом.</p>-->
-                        <!--</div>-->
-                        <!--<img src="../img/6.jpg" alt="">-->
-                    <!--</div>-->
+                <!--<div class="posr carouseItemBox">-->
+                <!--<div class="carouselText">-->
+                <!--<h2 class="title">Ваш личный мотиватор<br/> и источник пищи для мозга</h2>-->
+                <!--<p>Расскажу как избавиться от лишнего! Наверстать упущенное.</p>-->
+                <!--<p>Покарать недоваольных тварей и наслаждаться рассветом.</p>-->
+                <!--</div>-->
+                <!--<img src="../img/6.jpg" alt="">-->
+                <!--</div>-->
                 <!--</div>-->
                 <div class="carouselItem">
                     <div class="posr carouseItemBox">
                         <div class="carouselText">
-                            <h2 class="title">Организую активный тур в <span>прекрасные места</span>, проведу для вас <span>мастер классы</span></h2>
+                            <h2 class="title">Организую активный тур в <span>прекрасные места</span>, проведу для вас
+                                <span>мастер классы</span></h2>
                             <p>Мы с вами вместе поднимемся на 2300 м. и изведаем не мало троп</p>
                             <!--<a href="#" class="linkTo">Посмотреть по подробней</a>-->
                         </div>
@@ -117,25 +130,26 @@
                 <!--</div>-->
             </div>
             <!--<section class="bgBottom">-->
-                <!--<div class="clipBgBottom">-->
+            <!--<div class="clipBgBottom">-->
 
-                    <!--&lt;!&ndash;<svg id="Слой_1" data-name="Слой 1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1920.5 1336.72003"><defs><style>.cls-1{fill:url(#Безымянный_градиент_97);}.cls-2{fill:url(#Безымянный_градиент_81);}.cls-3{fill:#fff;}</style><linearGradient id="Безымянный_градиент_97" x1="958.08142" y1="621.43026" x2="961.26458" y2="1103.67911" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#20d51b" stop-opacity="0.48"/><stop offset="0.30968" stop-color="#106a0d" stop-opacity="0.23877"/><stop offset="0.57053" stop-color="#041d04" stop-opacity="0.06574"/><stop offset="0.70854" stop-opacity="0"/></linearGradient><linearGradient id="Безымянный_градиент_81" x1="960.71297" y1="926.70046" x2="959.79806" y2="-0.79417" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#0ad5ff" stop-opacity="0.2"/><stop offset="1" stop-opacity="0"/></linearGradient></defs><title>Ресурс 2</title><polygon class="cls-1" points="1920.5 563.22 1920 1336.72 0 1336.72 0 914.72 257 914.72 935 800.72 988.86 769.29 1036.83 751.22 1121 795.72 1245.11 748.97 1287 756.72 1373.5 741.22 1471.5 839.22 1604.5 706.22 1661 686.72 1661 756.72 1767 652.72 1837 708.72 1837 647.72 1920 730.72 1920 563.22 1920.5 563.22"/><polygon class="cls-2" points="1920 0 1920 722.81 1750 545.49 1746.41 549.24 1471.5 835.97 1344 702.99 1121 790.6 1036.83 744.19 985.5 764.35 935 795.82 257 914.72 0.5 914.72 0.09 0 1920 0"/><polygon class="cls-3" points="1753.54 564.26 1746.41 564.31 1750 560.72 1753.54 564.26"/></svg>&ndash;&gt;-->
-                <!--</div>-->
-                <!--<div class="scrollItem two">-->
-                    <!--<div class="cont">-->
-                        <!--<h1>Персональный <span>тренер</span>, <span>мотиватор</span> и все вам <span>рассказатор</span></h1>-->
-                    <!--</div>-->
-                    <!--<div class="canvasBox"></div>-->
-                <!--</div>-->
-                <!--<div class="scrollItem three">3</div>-->
+            <!--&lt;!&ndash;<svg id="Слой_1" data-name="Слой 1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1920.5 1336.72003"><defs><style>.cls-1{fill:url(#Безымянный_градиент_97);}.cls-2{fill:url(#Безымянный_градиент_81);}.cls-3{fill:#fff;}</style><linearGradient id="Безымянный_градиент_97" x1="958.08142" y1="621.43026" x2="961.26458" y2="1103.67911" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#20d51b" stop-opacity="0.48"/><stop offset="0.30968" stop-color="#106a0d" stop-opacity="0.23877"/><stop offset="0.57053" stop-color="#041d04" stop-opacity="0.06574"/><stop offset="0.70854" stop-opacity="0"/></linearGradient><linearGradient id="Безымянный_градиент_81" x1="960.71297" y1="926.70046" x2="959.79806" y2="-0.79417" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#0ad5ff" stop-opacity="0.2"/><stop offset="1" stop-opacity="0"/></linearGradient></defs><title>Ресурс 2</title><polygon class="cls-1" points="1920.5 563.22 1920 1336.72 0 1336.72 0 914.72 257 914.72 935 800.72 988.86 769.29 1036.83 751.22 1121 795.72 1245.11 748.97 1287 756.72 1373.5 741.22 1471.5 839.22 1604.5 706.22 1661 686.72 1661 756.72 1767 652.72 1837 708.72 1837 647.72 1920 730.72 1920 563.22 1920.5 563.22"/><polygon class="cls-2" points="1920 0 1920 722.81 1750 545.49 1746.41 549.24 1471.5 835.97 1344 702.99 1121 790.6 1036.83 744.19 985.5 764.35 935 795.82 257 914.72 0.5 914.72 0.09 0 1920 0"/><polygon class="cls-3" points="1753.54 564.26 1746.41 564.31 1750 560.72 1753.54 564.26"/></svg>&ndash;&gt;-->
+            <!--</div>-->
+            <!--<div class="scrollItem two">-->
+            <!--<div class="cont">-->
+            <!--<h1>Персональный <span>тренер</span>, <span>мотиватор</span> и все вам <span>рассказатор</span></h1>-->
+            <!--</div>-->
+            <!--<div class="canvasBox"></div>-->
+            <!--</div>-->
+            <!--<div class="scrollItem three">3</div>-->
             <!--</section>-->
         </header>
     </div>
     <!--<div class="navScroll">-->
-        <!--<div class="absolutNavRight"></div>-->
-        <!--<div class="rightDotsBox">-->
-            <!--<div class="rightDotsAbs"></div>-->
-        <!--</div>-->
+    <!--<div class="absolutNavRight"></div>-->
+    <!--<div class="rightDotsBox">-->
+    <!--<div class="rightDotsAbs"></div>-->
+    <!--</div>-->
     <!--</div>-->
 </body>
+
 </html>
