--- a/html/index.html
+++ b/html/index.html
@@ -33,6 +33,9 @@
             <a href="./photograph.html" class="item">
                 Фотография
             </a>
+            <a href="./about.html" class="item">
+                Обо мне
+            </a>
         </nav>
     </div>
     <div>
