--- a/html/training.html
+++ b/html/training.html
@@ -123,9 +123,8 @@
                     </div>
                 </div>
                 <div class="back">
-                    <div><span>1200р</span> по городу Королев (2 человека + 200р за каждого дополнительно)</div>
-                    <div>В студии г. Королев к общей сумме + <span>600р</span></div>
-                    <div><span>Выезд за город</span> стоимость договорная</div>
+                    <div><span>2000р</span></div>
+                    <div>В студии 2000р + <span>стоимость студии</span></div>
                 </div>
             </div>
             <div class="item pers">
@@ -148,9 +147,9 @@
                     </ul>
                 </div>
                 <div class="back">
-                    <div><span>1000р</span> по городу Королев</div>
-                    <div><span>1600р</span> в студии г. Королев</div>
-                    <div><span>Выезд за город</span> стоимость договорная</div>
+                    <div><span>2000р</span></div>
+                    <div>В студии 2000р + <span>стоимость студии</span></div>
+                    <div><span>Выезд на дом</span> стоимость договорная</div>
                 </div>
 
             </div>
@@ -173,7 +172,7 @@
                 </div>
                 <div class="back">
                     <div>
-                        <span>450р</span>за занятие.
+                        <span>400р</span>за занятие.
                     </div>
                 </div>
             </div>
