--- a/html/index.html
+++ b/html/index.html
@@ -37,7 +37,7 @@
     </div>
     <div>
         <div class="linkHome">
-            <a href="tel:89990037029" class="phone">8 999 003-70-29</a>
+            <a href="tel:89775449059" class="phone">8 (977) 544 90 59</a>
             <a target="_blank" rel="noopener" href="https://www.instagram.com/catterino_sochi/?hl=ru">
                 <svg class="svgInst" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                     <path
@@ -111,7 +111,7 @@
                 <!--<img src="../img/6.jpg" alt="">-->
                 <!--</div>-->
                 <!--</div>-->
-                <div class="carouselItem">
+                <!-- <div class="carouselItem">
                     <div class="posr carouseItemBox">
                         <div class="carouselText">
                             <h2 class="title">Организую активный тур в <span>прекрасные места</span>, проведу для вас
@@ -121,7 +121,7 @@
                         </div>
                         <img data-lazy="3" class="right" src="#" alt="">
                     </div>
-                </div>
+                </div> -->
                 <!--<div class="carouselItem">-->
                 <!--<img src="../img/7.jpg" alt="">-->
                 <!--</div>-->
